err/musica-toolkit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IntervalArithmetic'...
Listing './lib/python3.5/site-packages/IntervalArithmetic-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Musica'...
Listing './lib/python3.5/site-packages/Musica/Audio'...
Listing './lib/python3.5/site-packages/Musica/Config'...
Listing './lib/python3.5/site-packages/Musica/Figure'...
Listing './lib/python3.5/site-packages/Musica/Geometry'...
Compiling './lib/python3.5/site-packages/Musica/Geometry/trash.py'...
*** Sorry: IndentationError: unexpected indent (trash.py, line 3)
Listing './lib/python3.5/site-packages/Musica/Instrument'...
Listing './lib/python3.5/site-packages/Musica/Locale'...
Listing './lib/python3.5/site-packages/Musica/Logging'...
Listing './lib/python3.5/site-packages/Musica/Math'...
Listing './lib/python3.5/site-packages/Musica/Midi'...
Compiling './lib/python3.5/site-packages/Musica/Midi/GeneralMidiSoundSet.py'...
***   File "./lib/python3.5/site-packages/Musica/Midi/GeneralMidiSoundSet.py", line 89
    1:   'Acoustic Grand Piano',
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Musica/MusicXML'...
Listing './lib/python3.5/site-packages/Musica/Notation'...
Listing './lib/python3.5/site-packages/Musica/Tex'...
Listing './lib/python3.5/site-packages/Musica/Theory'...
Compiling './lib/python3.5/site-packages/Musica/Theory/notes.py'...
*** Sorry: IndentationError: unexpected indent (notes.py, line 1)
Listing './lib/python3.5/site-packages/Musica/Tools'...
Compiling './lib/python3.5/site-packages/Musica/Tools/ParameterChecker.py'...
***   File "./lib/python3.5/site-packages/Musica/Tools/ParameterChecker.py", line 71
    for key, value in kwargs:
                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/Musica/Xml'...
Listing './lib/python3.5/site-packages/Musica/locale'...
Listing './lib/python3.5/site-packages/Musica/locale/en'...
Listing './lib/python3.5/site-packages/Musica/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Musica/locale/fr'...
Listing './lib/python3.5/site-packages/Musica/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/PyXB-1.2.6.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/musica_toolkit-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyxb'...
Listing './lib/python3.5/site-packages/pyxb/binding'...
Listing './lib/python3.5/site-packages/pyxb/bundles'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat/raw'...
Listing './lib/python3.5/site-packages/pyxb/namespace'...
Listing './lib/python3.5/site-packages/pyxb/utils'...
Listing './lib/python3.5/site-packages/pyxb/xmlschema'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
